--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^10.12.18",
     "gsap": "^3.12.2",
     "react": "^18.0.0",
+    "react-clock": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
